--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     implementation group: 'org.docx4j', name: 'docx4j', version: '6.1.2'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 }
